Update C++ settings and refactor table processing logic for improved data handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,10 @@
         "span": "cpp",
         "sstream": "cpp",
         "variant": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "semaphore": "cpp",
+        "stop_token": "cpp",
+        "thread": "cpp",
+        "cinttypes": "cpp"
     }
 }
